traces/bug_375.txt
examples++-load/Element_P3.cpp:341: error: DEAD_STORE
  The value written to &n (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Element_P3.cpp:341:13: Write of unused value
339.               assert(val.N()>=20); // 23 degrees of freedom
340.               assert(val.M()==1); // 3 components
341.               int n=this->NbDoF;
                   ^
342.               // -------------
343.               // perm: the permutation for which the 4 tetrahedron vertices are listed with increasing GLOBAL number
